# Social_network_imdb

./: README.md  meson.build
data/: citytest.txt
src/: FileUtils.hpp  linkpredictor.cpp  meson.build  movietraveler.cpp  navigationsystem.cpp  pathfinder.cpp
src/Actor/: actor.hpp  meson.build
src/ActorGraph/: ActorGraph.cpp  ActorGraph.hpp  meson.build
src/ActorGraph/ActorNode/: actor.hpp  meson.build
src/ActorGraph/DisjointSet/: disjoint.hpp  meson.build
src/ActorGraph/MovieNode/: meson.build  movie.hpp
src/Movie/: meson.build  movie.hpp
src/Navi/: Navi.hpp  Place.hpp  meson.build
test/: meson.build  test_ActorGraph.cpp
